__fixtures__/webpack-stats/syntax-error/index.js
module.exports = () => {
  return <<div>1</div>;
}
